--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <div class="container">
         <h1>Netby Útmutató</h1>
+        
+        <!-- Keresőmező -->
+        <input type="text" id="search" placeholder="Keresés az útmutatók között..." onkeyup="searchGuides()">
+
+        <!-- Érdekes tények -->
+        <div id="funFact" class="fun-fact"></div>
+
         <div class="accordion">
             <div class="accordion-item">
                 <button class="accordion-button">Hogyan kell?</button>
@@ -30,6 +37,13 @@
                     </ul>
                 </div>
             </div>
+        </div>
+
+        <!-- Visszajelzés gomb -->
+        <button class="feedback-button" onclick="showFeedbackForm()">Visszajelzés</button>
+        <div id="feedbackForm" class="feedback-form">
+            <textarea placeholder="Írd meg a véleményed..."></textarea>
+            <button onclick="submitFeedback()">Küldés</button>
         </div>
     </div>
     <script src="script.js"></script>
