--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <!-- Keresőmező -->
         <input type="text" id="search" placeholder="Keresés az útmutatók között..." onkeyup="searchGuides()">
-
+        
         <!-- Érdekes tények -->
         <div id="funFact" class="fun-fact"></div>
 
@@ -24,6 +24,8 @@
                         <li>Weboldal készítése</li>
                         <li>Képek optimalizálása</li>
                         <li>Szöveg formázása HTML-ben</li>
+                        <li>CSS Grid használata</li>
+                        <li>JavaScript alapok</li>
                     </ul>
                 </div>
             </div>
@@ -34,6 +36,8 @@
                         <li>Amikor nem működik a weboldal</li>
                         <li>Amikor lassú a betöltés</li>
                         <li>Amikor hibásak a linkek</li>
+                        <li>Amikor nem jelenik meg a CSS</li>
+                        <li>Amikor nem fut a JavaScript</li>
                     </ul>
                 </div>
             </div>
