--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <button class="accordion-button">Hogyan kell?</button>
                 <div class="accordion-content">
                     <ul>
-                        <li>Weboldal készítése</li>
-                        <li>Képek optimalizálása</li>
-                        <li>Szöveg formázása HTML-ben</li>
-                        <li>CSS Grid használata</li>
-                        <li>JavaScript alapok</li>
+                        <li><a href="weboldal_keszitese.html">Weboldal készítése</a></li>
+                        <li><a href="kepek_optimalizalasa.html">Képek optimalizálása</a></li>
+                        <li><a href="szoveg_formazasa.html">Szöveg formázása HTML-ben</a></li>
+                        <li><a href="css_grid.html">CSS Grid használata</a></li>
+                        <li><a href="javascript_alapok.html">JavaScript alapok</a></li>
                     </ul>
                 </div>
             </div>
@@ -33,11 +33,11 @@
                 <button class="accordion-button">Mit tegyek?</button>
                 <div class="accordion-content">
                     <ul>
-                        <li>Amikor nem működik a weboldal</li>
-                        <li>Amikor lassú a betöltés</li>
-                        <li>Amikor hibásak a linkek</li>
-                        <li>Amikor nem jelenik meg a CSS</li>
-                        <li>Amikor nem fut a JavaScript</li>
+                        <li><a href="hibas_weboldal.html">Amikor nem működik a weboldal</a></li>
+                        <li><a href="lassu_betoltes.html">Amikor lassú a betöltés</a></li>
+                        <li><a href="hibas_linkek.html">Amikor hibásak a linkek</a></li>
+                        <li><a href="css_hiba.html">Amikor nem jelenik meg a CSS</a></li>
+                        <li><a href="javascript_nem_fut.html">Amikor nem fut a JavaScript</a></li>
                     </ul>
                 </div>
             </div>
