--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="error-message">
+    A weboldal tartalmazhat még hibákat.
+</div>
     <div class="container">
         <h1>Netby Útmutató</h1>
         
