--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                         <li><a href="szoveg_formazasa.html">Szöveg formázása HTML-ben</a></li>
                         <li><a href="css_grid.html">CSS Grid használata</a></li>
                         <li><a href="javascript_alapok.html">JavaScript alapok</a></li>
+                        <li><a href="seo_optimalizalas.html">SEO optimalizálás alapjai</a></li>
+                        <li><a href="reszponziv_webdesign.html">Reszponzív webdesign</a></li>
+                        <li><a href="adatbiztonsag.html">Adatbiztonság weboldalakon</a></li>
+                        <li><a href="sikeres_targyalas.html">Sikeres tárgyalás technikái</a></li>
+                        <li><a href="idokezeles.html">Időkezelés hatékonyan</a></li>
+                        <li><a href="penzugyi_tervezes.html">Pénzügyi tervezés alapjai</a></li>
+                        <li><a href="jatek_unreal_engine.html">Játék készítés(Unreal Engine)</a></li>
+                        <li><a href="jatek_unity.html">Játék készítés(Unity)</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,6 +49,14 @@
                         <li><a href="hibas_linkek.html">Amikor hibásak a linkek</a></li>
                         <li><a href="css_hiba.html">Amikor nem jelenik meg a CSS</a></li>
                         <li><a href="javascript_nem_fut.html">Amikor nem fut a JavaScript</a></li>
+                        <li><a href="adatvesztes.html">Amikor adatvesztés történik</a></li>
+                        <li><a href="sok_popup.html">Amikor túl sok a popup</a></li>
+                        <li><a href="404_error.html">Amikor 404 es hiba lép fel</a></li>
+                        <li><a href="spam_tamadas.html">Amikor spam támadás éri a weboldalt</a></li>
+                        <li><a href="ssl_hiba.html">Amikor nem működik az SSL tanúsítvány</a></li>
+                        <li><a href="stresszkezeles.html">Amikor túl sok a stressz</a></li>
+                        <li><a href="projekt_elakad.html">Amikor elakad egy projekt</a></li>
+                        <li><a href="hibas_alkalmazas.html">Amikor hibás az alkalmazás</a></li>
                     </ul>
                 </div>
             </div>
