--- a/jatek_unity.html
+++ b/jatek_unity.html
@@ -14,7 +14,7 @@
         <h2>1. lépés: Unity telepítése</h2>
         <p>A fejlesztés megkezdéséhez töltsd le és telepítsd a Unity Hub-ot, majd a Unity Editor-t:</p>
         <ul>
-            <li>Látogass el a <a href="https://unity.com">Unity weboldalára</a>, és töltsd le a Unity Hub-ot.</li>
+            <li>Látogass el a <a href="https://unity.com" target="_blank">Unity weboldalára</a>, és töltsd le a Unity Hub-ot.</li>
             <li>Nyisd meg a Unity Hub-ot, és telepítsd a legújabb Unity Editor verziót.</li>
         </ul>
         
