--- a/jatek_unreal_engine.html
+++ b/jatek_unreal_engine.html
@@ -14,7 +14,7 @@
         <h2>1. lépés: Unreal Engine telepítése</h2>
         <p>A fejlesztés megkezdéséhez töltsd le és telepítsd az Unreal Engine-t az Epic Games Launcher segítségével.</p>
         <ul>
-            <li>Látogass el az <a href="https://www.unrealengine.com">Unreal Engine weboldalára</a>, és töltsd le az Epic Games Launchert.</li>
+            <li>Látogass el az <a href="https://www.unrealengine.com" target="_blank">Unreal Engine weboldalára</a>, és töltsd le az Epic Games Launchert.</li>
             <li>A telepítés után nyisd meg a Launchert, és telepítsd az Unreal Engine-t.</li>
         </ul>
         
