--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <button onclick="submitFeedback()">Küldés</button>
         </div>
     </div>
+    <footer>
+        <center>
+        <p>NetBy @ 2024 Minden jog fenntartva.</p></center>
+      </footer>
     <script src="script.js"></script>
 </body>
 </html>
