more fun fact added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" id="search" placeholder="Keresés az útmutatók között..." onkeyup="searchGuides()">
         
         <!-- Érdekes tények -->
+        Érdekes tények
         <div id="funFact" class="fun-fact"></div>
 
         <div class="accordion">
